--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href='plugin.video.icdrama-1.9.4.1.zip'>plugin.video.icdrama-1.9.4.1.zip</a>
+<a href='plugin.video.icdrama-1.9.4.1.zip'>plugin.video.icdrama-1.9.4.1.zip</a><td>32329B</td>
