--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<a href='plugin.video.icdrama-1.9.4.1.zip'>plugin.video.icdrama-1.9.4.1.zip</a><td>32329B</td>
+<html>
+  <head></head>
+  <body>
+    <a href='plugin.video.icdrama-1.9.4.1.zip'>plugin.video.icdrama-1.9.4.1.zip</a><td>32329B</td>
+  </body>
+</html>
