--- a/icdrama/index.html
+++ b/icdrama/index.html
@@ -1,7 +1,7 @@
 <html>
   <head></head>
   <body>
-    <a href="plugin.video.icdrama-1.9.4.1.zip">plugin.video.icdrama-1.9.4.1.zip</a><td>32329B</td>
     <a href="plugin.video.tvhk-master.zip">plugin.video.tvhk-master.zip</a><td>1631237B</td>
+    <a href="repository.kodibae-3.0.0.zip">repository.kodibae-3.0.0.zip</a><td>1631237B</td>
   </body>
 </html>
