--- a/icdrama/index.html
+++ b/icdrama/index.html
@@ -3,5 +3,7 @@
   <body>
     <a href="plugin.video.tvhk-master.zip">plugin.video.tvhk-master.zip</a><td>1631237B</td>
     <a href="repository.kodibae-3.0.0.zip">repository.kodibae-3.0.0.zip</a><td>213022B</td>
+    <a href="aDrama.apk">aDrama.apk</a><td>6118401B</td>
+    <a href="V73.apk">V73.apk</a><td>11364697B</td>
   </body>
 </html>
