--- a/icdrama/index.html
+++ b/icdrama/index.html
@@ -6,5 +6,6 @@
     <a href="aDrama.apk">aDrama.apk</a><td>6118401B</td>
     <a href="V73.apk">V73.apk</a><td>11364697B</td>
     <a href="repository.aznhusband-kodi-repo-1.1.1.zip">repository.aznhusband-kodi-repo-1.1.1.zip</a><td>580B</td>
+    <a href="repository.exodusredux-0.0.8.zip">repository.exodusredux-0.0.8.zip</a><td>694237B</td>
   </body>
 </html>
