--- a/icdrama/index.html
+++ b/icdrama/index.html
@@ -4,7 +4,7 @@
     <a href="plugin.video.tvhk-master.zip">plugin.video.tvhk-master.zip</a><td>1631237B</td>
     <a href="repository.kodibae-3.0.0.zip">repository.kodibae-3.0.0.zip</a><td>213022B</td>
     <a href="aDrama.apk">aDrama.apk</a><td>6118401B</td>
-    <a href="港人話電視 119-GooglePlay.apk">港人話電視 119-GooglePlay.apk</a><td>10218709B</td>
+    <a href="港人話電視.v.119.apk">港人話電視.v.119.apk</a><td>13417346B</td>
     <a href="repository.aznhusband-kodi-repo-1.1.1.zip">repository.aznhusband-kodi-repo-1.1.1.zip</a><td>580B</td>
     <a href="repository.exodusredux-0.0.8.zip">repository.exodusredux-0.0.8.zip</a><td>694237B</td>
     <a href="aDrama_6.1.1.apk">aDrama_6.1.1.apk</a><td>6311749B</td>
